RESOLVED FIXED250534
REGRESSION(258716@main): [ iOS ] imported/w3c/web-platform-tests/feature-policy/reporting/encrypted-media-reporting.https.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=250534
Summary REGRESSION(258716@main): [ iOS ] imported/w3c/web-platform-tests/feature-poli...
Karl Rackler
Reported 2023-01-12 16:34:34 PST
Description: imported/w3c/web-platform-tests/feature-policy/reporting/encrypted-media-reporting.https.html It is a constant crash on iOS ToT, and since 258716@main. This issue can be bisected to 258716@main using command: run-webkit-tests --release --iterations=1 --ios-simulator imported/w3c/web-platform-tests/feature-policy/reporting/encrypted-media-reporting.https.html History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Ffetch%2Fapi%2Fabort%2Fserviceworker-intercepted.https.html&platform=ios&model=iPhone%2012 Crash Log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libobjc.A.dylib 0x7ff80004b5b8 objc_release + 8 (/Library/Caches/com.apple.xbs/Sources/objc4_Sim/runtime/objc-runtime-new.h:1899) 1 com.apple.WebCore 0x120dd0d06 WebCore::SourceBufferParserAVFObjC::isContentTypeSupported(WebCore::ContentType const&) 2 com.apple.WebCore 0x121eb277a WebCore::SourceBufferParser::isContentTypeSupported(WebCore::ContentType const&) 3 com.apple.WebCore 0x12040237a WebCore::MediaPlayerFactoryMediaSourceAVFObjC::supportsTypeAndCodecs(WebCore::MediaEngineSupportParameters const&) const 4 com.apple.WebCore 0x121e197d8 WebCore::bestMediaEngineForSupportParameters(WebCore::MediaEngineSupportParameters const&, WTF::HashSet<WebCore::MediaPlayerFactory const*, WTF::DefaultHash<WebCore::MediaPlayerFactory const*>, WTF::HashTraits<WebCore::MediaPlayerFactory const*>, WTF::HashTableTraits> const&, WebCore::MediaPlayerFactory const*) 5 com.apple.WebCore 0x121e1a590 WebCore::MediaPlayer::supportsType(WebCore::MediaEngineSupportParameters const&) 6 com.apple.WebCore 0x121d665a8 WebCore::CDMPrivate::getSupportedCapabilitiesForAudioVideoType(WebCore::CDMPrivate::AudioVideoType, WTF::Vector<WebCore::CDMMediaCapability, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WebCore::CDMKeySystemConfiguration const&, WebCore::CDMRestrictions&)
Attachments
symbolicated-log (15.73 KB, text/plain)
2023-01-12 16:41 PST, Karl Rackler
no flags
Radar WebKit Bug Importer
Comment 1 2023-01-12 16:34:54 PST
Karl Rackler
Comment 2 2023-01-12 16:35:52 PST
Update Description to include more tests found that are affected: Description: imported/w3c/web-platform-tests/feature-policy/reporting/encrypted-media-reporting.https.html imported/w3c/web-platform-tests/media-capabilities/decodingInfo.any.html imported/w3c/web-platform-tests/media-capabilities/decodingInfo.any.worker.html media/mediacapabilities/mediacapabilities-allowed-codecs.html media/mediacapabilities/mediacapabilities-allowed-containers.html
Karl Rackler
Comment 3 2023-01-12 16:41:22 PST
Created attachment 464474 [details] symbolicated-log
Jean-Yves Avenard [:jya]
Comment 4 2023-01-12 19:43:58 PST
EWS
Comment 5 2023-01-12 21:10:24 PST
Committed 258861@main (b7cf9b027632): <https://commits.webkit.org/258861@main> Reviewed commits have been landed. Closing PR #8601 and removing active labels.
Karl Rackler
Comment 6 2023-01-13 08:50:47 PST
Confirmed after landinding 258861@main the test is consistently passing.
Note You need to log in before you can comment on or make changes to this bug.