imported/w3c/web-platform-tests/feature-policy/reporting/encrypted-media-reporting.https.html is a constant crash https://bugs.webkit.org/show_bug.cgi?id=250534 rdar://104200900

Reviewed by Tim Horton.

On iOS AVStreamDataParser::init will manual release the instance.
If that pointer was stored in a RetainPtr it would lead to a double-release.

* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferParserAVFObjC.mm:
(WebCore::SourceBufferParserAVFObjC::isContentTypeSupported):

Canonical link: https://commits.webkit.org/258861@main